Binning process fixes and all locallyGeneratedLevels